// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ValidationHint styles should render with default styles 1`] = `
.circuit-0 {
  font-size: 14px;
  line-height: 20px;
  display: block;
  margin-top: 4px;
  color: #666;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

<span
  class="circuit-0"
>
  This field is required
</span>
`;

exports[`ValidationHint styles should render with invalid styles 1`] = `
.circuit-1 {
  font-size: 14px;
  line-height: 20px;
  display: block;
  margin-top: 4px;
  color: #666;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
  color: #D23F47;
}

.circuit-0 {
  display: inline-block;
  width: 16px;
  height: 16px;
  vertical-align: text-top;
  margin-right: 4px;
  color: #D23F47;
}

<span
  class="circuit-1"
>
  <svg
    class="circuit-0"
    fill="none"
    height="24"
    role="presentation"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M11.988 1A10.994 10.994 0 1 0 12 1h-.012zm4.71 14.29c.186.19.29.445.29.71a1 1 0 0 1-1 1c-.265 0-.52-.104-.71-.29l-3.29-3.29-3.29 3.29c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.265.104-.52.29-.71l3.29-3.29-3.29-3.29a1.013 1.013 0 0 1-.29-.71 1 1 0 0 1 1-1c.266 0 .52.104.71.29l3.29 3.29 3.29-3.29c.19-.186.444-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71L13.408 12l3.29 3.29z"
      fill="currentColor"
    />
  </svg>
  This field is required
</span>
`;

exports[`ValidationHint styles should render with valid styles 1`] = `
.circuit-1 {
  font-size: 14px;
  line-height: 20px;
  display: block;
  margin-top: 4px;
  color: #666;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
  color: #138849;
}

.circuit-0 {
  display: inline-block;
  width: 16px;
  height: 16px;
  vertical-align: text-top;
  margin-right: 4px;
  color: #138849;
}

<span
  class="circuit-1"
>
  <svg
    class="circuit-0"
    fill="none"
    height="24"
    role="presentation"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M11.988 1A10.994 10.994 0 1 0 12 1h-.012zm5.77 7.64-7 8a1.008 1.008 0 0 1-1.48.07l-3-3a1.013 1.013 0 0 1-.29-.71 1 1 0 0 1 1-1c.266 0 .52.104.71.29l2.22 2.23 6.3-7.16a1 1 0 1 1 1.54 1.28z"
      fill="currentColor"
    />
  </svg>
  This field is required
</span>
`;

exports[`ValidationHint styles should render with warning styles 1`] = `
.circuit-1 {
  font-size: 14px;
  line-height: 20px;
  display: block;
  margin-top: 4px;
  color: #666;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0 {
  display: inline-block;
  width: 16px;
  height: 16px;
  vertical-align: text-top;
  margin-right: 4px;
  color: #F5C625;
}

<span
  class="circuit-1"
>
  <svg
    class="circuit-0"
    fill="none"
    height="24"
    role="presentation"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M14.544 3.481c-1.13-1.975-3.958-1.975-5.088 0L1.398 17.556C.268 19.53 1.681 22 3.942 22h16.116c2.261 0 3.675-2.47 2.544-4.444L14.544 3.48zM11 8a1 1 0 0 1 2 0v5a1 1 0 0 1-2 0V8zm1 11a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
  This field is required
</span>
`;
